# ecust-hector-util

./: README.md
hector_quadrotor_controllers/src/: attitude_controller.cpp
hector_quadrotor_demo/launch/: indoor_flight_gazebo.launch  outdoor_flight_gazebo.launch  outdoor_flight_gazebo_org.launch  outdoor_flight_gazebo_real_org.launch
hector_quadrotor_util/: CMakeLists.txt  package.xml
hector_quadrotor_util/bag/: eular_test_traj.bag  simple_ctrl_traj.bag
hector_quadrotor_util/hector_quadrotor_util/bag/: final_traj.bag  small_eular_test_traj.bag  traj.bag
hector_quadrotor_util/hector_quadrotor_util/include/hector_quadrotor_util/: PIDcontroller.h  data_type.h  joy_sim.h  my_data_type.hpp  navigator.h
hector_quadrotor_util/hector_quadrotor_util/launch/: aggressive_wolrd.launch  hector_util.launch  rolling_landscape_120m.launch
hector_quadrotor_util/hector_quadrotor_util/src/: PIDcontroller.cpp  ctrl_interface.cpp  joy_sim.cpp  main.cpp  navigator.cpp  temp.cpp
hector_quadrotor_util/hector_quadrotor_util/worlds/: aggressive.world  test_eular.world
hector_quadrotor_util/include/hector_quadrotor_util/: PIDcontroller.h  ctrl_interface.h  my_data_type.hpp  navigator.h
hector_quadrotor_util/launch/: aggressive_wolrd.launch  hector_util.launch
hector_quadrotor_util/src/: PIDcontroller.cpp  ctrl_interface.cpp  navigator.cpp
hector_quadrotor_util/worlds/: aggressive.world  empty.world  narrow.world  ring.world
