<package>
  <name>hector_quadrotor_util</name>
  <version>0.1.0</version>
  <description>The hector_quadrotor_util package</description>

  <maintainer email="347750024@qq.com">randy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
	<run_depend>rosbag</run_depend>
  <run_depend>hector_uav_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
